update social network